# 162-pinn-black-scholes

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  black_scholes_pinn.py  data_loader.py  greeks.py  requirements.txt  train.py  visualize.py
rust_pinn_bs/: Cargo.toml
rust_pinn_bs/examples/: basic_pricing.rs
rust_pinn_bs/src/: lib.rs
