[package]
name = "pinn_black_scholes"
version = "0.1.0"
edition = "2021"
description = "Physics-Informed Neural Network for Black-Scholes option pricing"
authors = ["ML Trading Examples"]
license = "MIT"
keywords = ["pinn", "black-scholes", "options", "trading", "neural-network"]

[lib]
name = "pinn_black_scholes"
path = "src/lib.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# BINARIES
# ═══════════════════════════════════════════════════════════════════════════════

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "price_options"
path = "src/bin/price_options.rs"

[[bin]]
name = "fetch_data"
path = "src/bin/fetch_data.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# EXAMPLES
# ═══════════════════════════════════════════════════════════════════════════════

[[example]]
name = "basic_pricing"
path = "examples/basic_pricing.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# DEPENDENCIES
# ═══════════════════════════════════════════════════════════════════════════════

[dependencies]
# Linear algebra and numerical computing
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Statistics
statrs = "0.16"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Pretty printing
colored = "2.1"
tabled = "0.15"

# Progress bars
indicatif = "0.17"

# Ordered float
ordered-float = "4.2"

[dev-dependencies]
approx = "0.5"
